src/objects/Priority_Mapping__c.object
<CustomObject>
    <description>Case Priority Mapping.</description>
    <fields>
        <fullName>Application__c</fullName>
        <label>Application</label>
        <picklist>
            <picklistValues>
                <fullName>SIS Help Desk</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Classification__c</fullName>
        <label>Case Classification</label>
        <picklist>
            <picklistValues>
                <fullName>Application Error</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Billing Data Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Digital Signature Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement to Existing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Input File load Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Master Table Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Profile Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Migration Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Output File Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Processing Time Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server / iiNET Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Settlement File Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Related</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User Access Issue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Reason__c</fullName>
        <label>Case Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Access to SIS Solution is not possible</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Alerts are not / incorrectly delivered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A master table value provided to SIS has caused a validation error</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing data captured through IS-Web does not contain intended values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing data is incorrectly reported or not present in the respective clearing house.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing data submitted via IS-IDEC/IS-XML does not contain intended values</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Related Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Certification Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enhancement to Existing Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Functionality not working as expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invoices cannot be Digitally Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Member Profile issue / updates not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor defects which do not affect functionality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Feature Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Digital Signature issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Output billing files cannot be created or are incorrect or do not arrive at their destination within SIS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reports cannot be viewed / downloaded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response times for files submitted are greater than expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Response times for manual file load are greater than expected</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sandbox Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Server / iiNET Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIS Solution is not working</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIS usage data incorrectly produced</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submission of billing data not possible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Documents did not link</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Related Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to send migrated transaction types</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User password is disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Validation reports have not been received / generated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Case_Type__c</fullName>
        <label>Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Feature Request</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>General Question</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Problem / Issue</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Priority 1 (Showstopper)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority 2 (Major)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Priority 3 (Minor)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Priority 4 (Trivial Defects)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Priority Mapping</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Case_Classification__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>ICH</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Case_Classification__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>ICH Help Desk</value>
        </filters>
        <label>ICH</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SIS</fullName>
        <columns>NAME</columns>
        <columns>Application__c</columns>
        <columns>Case_Type__c</columns>
        <columns>Case_Classification__c</columns>
        <columns>Case_Reason__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Application__c</field>
            <operation>equals</operation>
            <value>SIS Help Desk</value>
        </filters>
        <label>SIS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>MAPPING - {0000}</displayFormat>
        <label>Priority Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Priorities Mappings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>